--- a/content/publication/shen-2022-double/cite.bib
+++ b/content/publication/shen-2022-double/cite.bib
@@ -1,6 +1,7 @@
 @inproceedings{shen2022double,
  author = {Shen, Yunyi and Masoero, Lorenzo and Schraiber, Joshua and Broderick, Tamara},
  booktitle = {NeurIPS 2022 Workshop on Learning Meaningful Representations of Life},
- title = {Double trouble: Predicting new variant counts across two heterogeneous populations}
+ title = {Double trouble: Predicting new variant counts across two heterogeneous populations},
+ year = {2022}
 }
 
