--- a/content/publication/nguyen-2020-independent/cite.bib
+++ b/content/publication/nguyen-2020-independent/cite.bib
@@ -1,6 +1,6 @@
 @article{nguyen2020independent,
  author = {Nguyen, Tin D and Huggins, Jonathan and Masoero, Lorenzo and Mackey, Lester and Broderick, Tamara},
- journal = {arXiv preprint arXiv:2009.10780},
+ journal = {Bayesian Analysis 2023+; arXiv preprint arXiv:2009.10780},
  title = {Independent finite approximations for Bayesian nonparametric inference},
  year = {2020}
 }
