--- a/content/publication/masoero-2023-leveraging/cite.bib
+++ b/content/publication/masoero-2023-leveraging/cite.bib
@@ -1,6 +1,7 @@
-@inproceedings{shen2022double,
+@inproceedings{masoero2023leveraging,
  author = {Masoero, Lorenzo and Hains, Doug and McQueen, James},
- booktitle = {arXiv 2305.01109},
+ booktitle = {Proceedings of The KDD'22 Workshop on Causal Discovery},
  title = {Leveraging covariate adjustment at scale in online A/B testing},
+ journal = {arXiv preprint arXiv:2305.06466},
  year = {2023}
 }
