--- a/cv/cv_masoero_2024.tex
+++ b/cv/cv_masoero_2024.tex
@@ -114,7 +114,7 @@ At Amazon I have been working on:
 		\item ``\href{https://drive.google.com/file/d/1Pc9Zg7ygekgJ9QvAG2YUZOlPG8qszHNF/view?usp=sharing}{\emph{How do Advertisers React to Changes in Ad Auction Pricing? Evidence from a Clustered Multiple Randomization Experiment}''} (KDD 2024, Workshop on Two-Sided Marketplace Optimization)
 	\end{itemize}
 	\normalsize
-		\item \textbf{Levaraging covariates for improved estimates of causal effects}: I partnered with Weblab's engineering team to improve and extend our analytic engine, moving towards a flexible, distributed interface. My work consisted of both leading the design the analytic engine, as well as hands-on implementation of PySpark routines to support production code. Our engine produces thousands of causal estimates of production experiments running at a daily cadence. This implementation was informed by  my research on the value of using covariates to form estimates of causal effects in online experiments. For an illustration, see \href{https://proceedings.mlr.press/v218/masoero23a.html}{``\emph{Leveraging covariate adjustments at scale in online A/B testing}''} (KDD CDPD, 2023).
+		\item \textbf{Levaraging covariates for improved estimates of causal effects in online experiments}: I partnered with Weblab's engineering team to improve and extend our analytic engine, moving towards a flexible, distributed interface. My work consisted of both leading the design the analytic engine, as well as hands-on implementation of PySpark routines to support production code. Our engine produces thousands of causal estimates of production experiments running at a daily cadence. This implementation was informed by  my research on the value of using covariates to form estimates of causal effects in online experiments. For an illustration, see \href{https://proceedings.mlr.press/v218/masoero23a.html}{``\emph{Leveraging covariate adjustments at scale in online A/B testing}''} (KDD CDPD, 2023).
 \end{itemize}
 
 Previously, I completed my PhD at MIT in EECS in August 2021 under the supervision of Professor Tamara Broderick. 
