--- a/cv/cv_masoero_2024.tex
+++ b/cv/cv_masoero_2024.tex
@@ -99,22 +99,47 @@ bookmarks, colorlinks, breaklinks,
 \end{minipage}
 \vspace{.3in}
 \par
-I am a Senior Applied Scientist at Weblab, where I have been working since September 2021. I joined Weblab, Amazon's largest A/B testing platform, supporting tens of thousands online experiments every year, after a summer internship under the supervision of Professor Guido Imbens, Professor Thomas Richardson and Dr. James McQueen.   
-At Amazon I have been working on:
+%I am a Senior Applied Scientist at Weblab --- Amazon's largest A/B testing platform --- where I have been working since September 2021. 
+%As an Applied scientist, in my daily work I divide my time between open ended research questions, writing academic papers, and hands-on implementation of algorithms in large-scale production systems, impacting hundreds of millions of customers on a daily basis.
+%At Weblab, I have been working with world class experts in causal inference, working on:
+%\begin{itemize}
+%	\item \textbf{Online experimentation with interference}: As a research scientist, I have been the first author of several scientific papers developing novel experimental designs for large scale testing of interference in online experiments. 
+%	These designs have been implemented at scale in production, impacting hundred of millions of customers. In particular, I co-lead the implementation and design of the first set of large real-world ``multi-randomized'' experiments at Amazon.
+%	Most recently, we have employed these designs at scale in problems related to Ad auction pricing.
+%	\small
+%	\begin{itemize}
+%		\item ``\href{https://projecteuclid.org/journals/statistical-science/advance-publication/Experimental-Design-in-Marketplaces/10.1214/23-STS883.short}{\emph{Experimental Design in Marketplaces}}'' (Statistical Science)
+%		\item ``\href{https://arxiv.org/abs/2401.01264}{\emph{Multiple Randomization Designs: Estimation and Inference with Interference}}'' (In submission)
+%		\item``\href{https://www.amazon.science/publications/efficient-switchback-experiments-via-multiple-randomization-designs}{\emph{Efficient switchback experiments via multiple randomization designs}}'' (Code@MIT 2023)
+%		\item ``\href{https://arxiv.org/abs/2405.18621}{\emph{Multi-Armed Bandits with Network Interference}}'' (In submission)
+%		\item ``\href{https://drive.google.com/file/d/1Pc9Zg7ygekgJ9QvAG2YUZOlPG8qszHNF/view?usp=sharing}{\emph{How do Advertisers React to Changes in Ad Auction Pricing? Evidence from a Clustered Multiple Randomization Experiment}''} (KDD 2024, Workshop on Two-Sided Marketplace Optimization)
+%	\end{itemize}
+%	\normalsize
+%		\item \textbf{Levaraging covariates for improved estimates of causal effects in online experiments}: I partnered with Weblab's engineering team to improve and extend our analytic engine, moving towards a flexible, distributed interface. My work consisted of both leading the design the analytic engine, as well as hands-on implementation of PySpark routines to support production code. Our engine produces thousands of causal estimates of production experiments running at a daily cadence. This implementation was informed by  my research on the value of using covariates to form estimates of causal effects in online experiments. For an illustration, see \href{https://proceedings.mlr.press/v218/masoero23a.html}{``\emph{Leveraging covariate adjustments at scale in online A/B testing}''} (KDD CDPD, 2023).
+%\end{itemize}
+
+\section*{Senior Applied Scientist | Weblab at Amazon}
+\textbf{September 2021 - Present}
+
+I am a Senior Applied Scientist at Weblab, Amazon’s largest A/B testing platform, where I work on advancing experimentation at scale. My work spans across open-ended research, academic paper writing, and the hands-on implementation of large-scale algorithms in production, directly impacting hundreds of millions of customers daily. At Weblab, I collaborate with leading experts in causal inference and drive innovation in:
+
 \begin{itemize}
-	\item \textbf{Online experimentation with interference}: I lead the effort to develop novel experimental designs for large scale testing of interference in online experiments. 
-	These designs have been implemented at scale in production - I co-lead the implementation and design of the first large real-world ``multi-randomized'' experiments at Amazon.
-	Most recently, we have employed these designs at scale in problems related to Ad auction pricing.
-	\small
-	\begin{itemize}
-		\item ``\href{https://projecteuclid.org/journals/statistical-science/advance-publication/Experimental-Design-in-Marketplaces/10.1214/23-STS883.short}{\emph{Experimental Design in Marketplaces}}'' (Statistical Science)
-		\item ``\href{https://arxiv.org/abs/2401.01264}{\emph{Multiple Randomization Designs: Estimation and Inference with Interference}}'' (In submission)
-		\item``\href{https://www.amazon.science/publications/efficient-switchback-experiments-via-multiple-randomization-designs}{\emph{Efficient switchback experiments via multiple randomization designs}}'' (Code@MIT 2023)
-		\item ``\href{https://arxiv.org/abs/2405.18621}{Multi-Armed Bandits with Network Interference}'' (In submission)
-		\item ``\href{https://drive.google.com/file/d/1Pc9Zg7ygekgJ9QvAG2YUZOlPG8qszHNF/view?usp=sharing}{\emph{How do Advertisers React to Changes in Ad Auction Pricing? Evidence from a Clustered Multiple Randomization Experiment}''} (KDD 2024, Workshop on Two-Sided Marketplace Optimization)
-	\end{itemize}
-	\normalsize
-		\item \textbf{Levaraging covariates for improved estimates of causal effects in online experiments}: I partnered with Weblab's engineering team to improve and extend our analytic engine, moving towards a flexible, distributed interface. My work consisted of both leading the design the analytic engine, as well as hands-on implementation of PySpark routines to support production code. Our engine produces thousands of causal estimates of production experiments running at a daily cadence. This implementation was informed by  my research on the value of using covariates to form estimates of causal effects in online experiments. For an illustration, see \href{https://proceedings.mlr.press/v218/masoero23a.html}{``\emph{Leveraging covariate adjustments at scale in online A/B testing}''} (KDD CDPD, 2023).
+    \item \textbf{Online Experimentation with Interference:} 
+    I have pioneered experimental designs for large-scale testing of interference in online experiments, co-leading the implementation of the first large ``multi-randomized'' experiments at Amazon. These experiments, unlike classical A/B tests, jointly randomize across multiple units in the experiment (e.g., customers and advertisers). Via these designs, we can capture ``spillover effects'' that would otherwise be overlooked. For example, these have been implemented to precisely capture the indirect behavioral response of advertisers induced by a change in pricing schemes of ad-auctions.
+    \begin{itemize}
+        \item Key papers include: 
+        \begin{itemize}
+            \item \emph{Experimental Design in Marketplaces} (Statistical Science)
+            \item \emph{Multiple Randomization Designs} (In submission)
+            \item \emph{Efficient Switchback Experiments via Multiple Randomization Designs} (Code@MIT 2023)
+        \end{itemize}
+    \end{itemize}
+    
+    \item \textbf{Leveraging Covariates for Enhanced Causal Estimates:}
+    I partnered with engineering teams to design and implement a distributed analytic engine using PySpark, enabling more accurate causal estimates in thousands of daily experiments. This innovation was backed by research on the value of covariates in online A/B testing, contributing to improvements in experiment analytics.
+    \begin{itemize}
+        \item Featured paper: \emph{Leveraging Covariate Adjustments at Scale in Online A/B Testing} (KDD CDPD, 2023).
+    \end{itemize}
 \end{itemize}
 
 Previously, I completed my PhD at MIT in EECS in August 2021 under the supervision of Professor Tamara Broderick. 
@@ -123,7 +148,7 @@ During my PhD, I worked on Bayesian inference, with an emphasis on the developme
 \section*{Employment}
 \noindent
 \years{2024-}\ Applied Scientist III, Weblab, Amazon.\\
-\years{2022-}\ Applied Scientist II, Weblab, Amazon.\\
+\years{2022-2023}\ Applied Scientist II, Weblab, Amazon.\\
 \years{2021}\ Applied Scientist, Weblab, Amazon. \\
 \years{2020}\ Applied Science Intern, CoreAI, Amazon. \\
 
