--- a/cv/cv_masoero_2024.tex
+++ b/cv/cv_masoero_2024.tex
@@ -97,7 +97,7 @@ bookmarks, colorlinks, breaklinks,
 \textsc{email}: \href{mailto:lo.masoero@gmail.com}{lo [dot] masoero [at] gmail [dot] com} \\
  \textsc{web}: \href{http://lorenzomasoero.com}{\textcolor{blue}{http://lorenzomasoero.com}}
 \end{minipage}
-\vspace{.3in}
+%\vspace{.15in}
 \par
 %I am a Senior Applied Scientist at Weblab --- Amazon's largest A/B testing platform --- where I have been working since September 2021. 
 %As an Applied scientist, in my daily work I divide my time between open ended research questions, writing academic papers, and hands-on implementation of algorithms in large-scale production systems, impacting hundreds of millions of customers on a daily basis.
@@ -118,10 +118,10 @@ bookmarks, colorlinks, breaklinks,
 %		\item \textbf{Levaraging covariates for improved estimates of causal effects in online experiments}: I partnered with Weblab's engineering team to improve and extend our analytic engine, moving towards a flexible, distributed interface. My work consisted of both leading the design the analytic engine, as well as hands-on implementation of PySpark routines to support production code. Our engine produces thousands of causal estimates of production experiments running at a daily cadence. This implementation was informed by  my research on the value of using covariates to form estimates of causal effects in online experiments. For an illustration, see \href{https://proceedings.mlr.press/v218/masoero23a.html}{``\emph{Leveraging covariate adjustments at scale in online A/B testing}''} (KDD CDPD, 2023).
 %\end{itemize}
 
-\section*{Senior Applied Scientist | Weblab at Amazon}
+\section*{Senior Applied Scientist | Amazon, Weblab}
 \textbf{September 2021 - Present}
 
-I am a Senior Applied Scientist at Weblab, Amazon’s largest A/B testing platform, where I work on advancing experimentation at scale. My work spans across open-ended research, academic paper writing, and the hands-on implementation of large-scale algorithms in production, directly impacting hundreds of millions of customers daily. At Weblab, I collaborate with leading experts in causal inference and drive innovation in:
+I am a Senior Applied Scientist at Weblab, Amazon’s largest A/B testing platform, where I work on advancing online experimentation at scale. My work spans across open-ended research, academic paper writing, and the hands-on implementation of large-scale algorithms in production, directly impacting hundreds of millions of customers daily. At Weblab, I collaborate with leading experts in causal inference and drive innovation in:
 
 \begin{itemize}
     \item \textbf{Online Experimentation with Interference:} 
@@ -129,21 +129,22 @@ I am a Senior Applied Scientist at Weblab, Amazon’s largest A/B testing platfo
     \begin{itemize}
         \item Key papers include: 
         \begin{itemize}
-            \item \emph{Experimental Design in Marketplaces} (Statistical Science)
-            \item \emph{Multiple Randomization Designs} (In submission)
-            \item \emph{Efficient Switchback Experiments via Multiple Randomization Designs} (Code@MIT 2023)
+            \item {\href{https://projecteuclid.org/journals/statistical-science/advance-publication/Experimental-Design-in-Marketplaces/10.1214/23-STS883.short}{\color{blue}{Experimental Design in Marketplaces}}} (Statistical Science)
+            \item \href{https://arxiv.org/abs/2401.01264}{\color{blue}{Multiple Randomization Designs}} (In submission)
+            \item \href{https://www.amazon.science/publications/efficient-switchback-experiments-via-multiple-randomization-designs}{\color{blue}{Efficient Switchback Experiments via Multiple Randomization Designs}} (Code@MIT 2023)
+            \item \href{https://arxiv.org/abs/2405.18621}{\color{blue}{Multi-Armed Bandits with Network Interference}} (NeurIPS 2024)
         \end{itemize}
     \end{itemize}
     
     \item \textbf{Leveraging Covariates for Enhanced Causal Estimates:}
     I partnered with engineering teams to design and implement a distributed analytic engine using PySpark, enabling more accurate causal estimates in thousands of daily experiments. This innovation was backed by research on the value of covariates in online A/B testing, contributing to improvements in experiment analytics.
     \begin{itemize}
-        \item Featured paper: \emph{Leveraging Covariate Adjustments at Scale in Online A/B Testing} (KDD CDPD, 2023).
+        \item Featured paper: \href{https://proceedings.mlr.press/v218/masoero23a.html}{\color{blue}{Leveraging Covariate Adjustments at Scale in Online A/B Testing}} (KDD CDPD, 2023).
     \end{itemize}
 \end{itemize}
 
 Previously, I completed my PhD at MIT in EECS in August 2021 under the supervision of Professor Tamara Broderick. 
-During my PhD, I worked on Bayesian inference, with an emphasis on the development of efficient and theoretically grounded approaches for optimal design of experiments in genomic studies.
+During my PhD, I worked on Bayesian inference, with an emphasis on the development of efficient and theoretically grounded approaches for optimal design of experiments in genomic studies. In particular, my PhD thesis consisted of a sequence of papers developing a methodology to devise optimal sampling strategies to maximize learnings stemming from rare-variants discoveries under fixed experimental budgets  using a Bayesian nonparametric approach (``{More for Less: Predicting and maximizing genetic variant discovery via Bayesian nonparametrics}'', in \href{https://academic.oup.com/biomet/advance-article-abstract/doi/10.1093/biomet/asab012/6146908?redirectedFrom=PDF}{Biometrika}, ``{Scaled process priors: Improved predictions and uncertainties for new-feature counts via random scaling in Bayesian nonparametrics}'', in the \href{https://www.tandfonline.com/doi/full/10.1080/01621459.2022.2115918}{Journal of the American Statistical Association},  ``{Bayesian nonparametric strategies for power maximization in rare variants association studies}'', spotilight at \href{https://www.lmrl.org/}{Learning Meaningful Representations of Life},  Neural Information Processing Systems, 2021).
 %
 \section*{Employment}
 \noindent
@@ -179,8 +180,8 @@ During my PhD, I worked on Bayesian inference, with an emphasis on the developme
 \section*{Research}
 %\years{2020} 
 \begin{itemize}
-	\item ``\href{https://drive.google.com/file/d/1Pc9Zg7ygekgJ9QvAG2YUZOlPG8qszHNF/view?usp=sharing}{{\textbf{How do Advertisers React to Changes in Ad Auction Pricing? Evidence from a Clustered Multiple Randomization Experiment}}''} (KDD 2024, Workshop on Two-Sided Marketplace Optimization)
-	\item ``\textbf{Multi-Armed Bandits with Network Interference}''; \href{https://arxiv.org/abs/2405.18621}{arXiv preprint, 2405.18621}. (Agarwal, Agarwal, \mm, Whitehouse)
+	\item ``\href{https://assets.amazon.science/f2/fe/e1408dd94a529618b19e8c56eb3f/how-do-advertisers-react-to-changes-in-ad-auction-pricing.pdf}{{\textbf{How do Advertisers React to Changes in Ad Auction Pricing? Evidence from a Clustered Multiple Randomization Experiment}}''} (KDD 2024, Workshop on Two-Sided Marketplace Optimization)
+	\item ``\textbf{Multi-Armed Bandits with Network Interference}''; \href{https://arxiv.org/abs/2405.18621}{NeurIPS 2024}. (Agarwal, Agarwal, \mm, Whitehouse)
 	\item ``\textbf{Double trouble: Predicting new variant counts across two heterogeneous populations}''; \href{https://arxiv.org/pdf/2403.02154.pdf}{arXiv preprint, 2403.02154}. (Shen, \mm, Schraiber, Broderick)
 	\item ``\textbf{Improved prediction of future user activity in online A/B testing}''; \href{https://arxiv.org/abs/2402.03231}{arXiv preprint, 2402.03231}. (\mm, Beraha, Richardson, Favaro)
 	\item ``\textbf{A Nonparametric Bayes Approach to Online Activity Prediction}''; \href{https://arxiv.org/abs/2401.14722}{arXiv preprint, 2401.14722}. (Beraha, \mm, Richardson, Favaro)
@@ -215,6 +216,11 @@ for practical Bayesian nonparametrics}'', \textcolor{red}{\textbf{Spotlight}}, \
 \end{itemize}
 \section*{Talks, Poster sessions and Conference Presentations}
 %\section*{Presentations}
+\years{2024}
+\begin{itemize}
+	\item KDD 2024 Workshop on Two Sided Marketplace Optimization, selected talk.
+	\item Conference on Online Digital Experimentation, MIT, two selected talks, one poster session.
+\end{itemize}
 \years{2023}
 \begin{itemize}
 	\item KDD Workshop on Causal Discovery, Prediction and Decision, Long Beach (CA).
