amending titles and links

--- a/cv/cv_masoero_2024.tex
+++ b/cv/cv_masoero_2024.tex
@@ -191,7 +191,7 @@ During my PhD, I worked on Bayesian inference, with an emphasis on the developme
 \section*{Research}
 %\years{2020} 
 \begin{itemize}
-	\item ``\href{https://drive.google.com/drive/folders/1557KDfzlwEi-Pn3J0fDgMX3XWwSqyeij}{{\textbf{Measuring direct and Indirect Impacts in a Multi-Sided Marketplace: Evidence from a Clustered Multiple Randomization Experiment}}''} (CODE@MIT2024, KDD 2024, Workshop on Two-Sided Marketplace Optimization)
+	\item ``\href{https://drive.google.com/file/d/1auP6JpB0DxIQRCIDazum5uFlm9BtTkiS/view?usp=sharing}{{\textbf{Measuring direct and Indirect Impacts in a Multi-Sided Marketplace: Evidence from a Clustered Multiple Randomization Experiment}}''} (CODE@MIT2024, KDD 2024, Workshop on Two-Sided Marketplace Optimization)
 	\item ``\textbf{Multi-Armed Bandits with Network Interference}''; \href{https://arxiv.org/abs/2405.18621}{NeurIPS 2024}. (Agarwal, Agarwal, \mm, Whitehouse)
 	\item ``\textbf{Double trouble: Predicting new variant counts across two heterogeneous populations}''; \href{https://arxiv.org/pdf/2403.02154.pdf}{arXiv preprint, 2403.02154}. (Shen, \mm, Schraiber, Broderick)
 	\item ``\textbf{Improved prediction of future user activity in online A/B testing}''; \href{https://arxiv.org/abs/2402.03231}{arXiv preprint, 2402.03231}. (\mm, Beraha, Richardson, Favaro)
