amending titles and links

--- a/cv/cv_masoero_2025.tex
+++ b/cv/cv_masoero_2025.tex
@@ -128,28 +128,30 @@ I am a Senior Applied Scientist at Weblab, Amazon’s largest A/B testing platfo
 
 \begin{itemize}
     \item \textbf{Online Experimentation with Interference:} 
-    I have pioneered experimental designs for large-scale testing of interference in online experiments, co-leading the implementation of the first large ``multi-randomized'' experiments at Amazon. These experiments, unlike classical A/B tests, jointly randomize across multiple units in the experiment (e.g., customers and advertisers). Via these designs, we can capture ``spillover effects'' that would otherwise be overlooked. For example, these have been implemented to precisely capture the indirect behavioral response of advertisers induced by a change in pricing schemes of ad-auctions. Key papers include: 
+    I have pioneered experimental designs for large-scale testing of interference in online experiments, co-leading the implementation of the first large ``multi-randomized'' experiments at Amazon. These experiments, unlike classical A/B tests, jointly randomize across multiple units in the experiment (e.g., customers and advertisers). Via these designs, we can detect ``spillover effects'' that would otherwise be overlooked. For example, these have been implemented to precisely capture the indirect behavioral response of advertisers induced by a change in pricing schemes of ad-auctions. Key papers I have authored include (asterisk denotes first authorship, double asterisk first co-authorship): 
     \small{
         \begin{itemize}
-	    \item \href{https://arxiv.org/abs/2401.01264}{\color{blue}{Multiple Randomization Designs}} (In submission)
-            \item {\href{https://projecteuclid.org/journals/statistical-science/advance-publication/Experimental-Design-in-Marketplaces/10.1214/23-STS883.short}{\color{blue}{Experimental Design in Marketplaces}}} (Statistical Science, 2023)
-            \item \href{https://www.amazon.science/publications/efficient-switchback-experiments-via-multiple-randomization-designs}{\color{blue}{Efficient Switchback Experiments via Multiple Randomization Designs}} (CODE@MIT 2023)
+	    \item \href{https://arxiv.org/abs/2401.01264}{\color{blue}{Multiple Randomization Designs*}} (In submission)
+            \item {\href{https://projecteuclid.org/journals/statistical-science/advance-publication/Experimental-Design-in-Marketplaces/10.1214/23-STS883.short}{\color{blue}{Experimental Design in Marketplaces*}}} (Statistical Science, 2023)
+            \item \href{https://www.amazon.science/publications/efficient-switchback-experiments-via-multiple-randomization-designs}{\color{blue}{Efficient Switchback Experiments via Multiple Randomization Designs*}} (CODE@MIT 2023)
             \item \href{https://arxiv.org/abs/2405.18621}{\color{blue}{Multi-Armed Bandits with Network Interference}} (NeurIPS 2024, and CODE@MIT 2024)
             \item \href{}{\color{blue}{Regression Adjustments for Experimental Designs in Two-Side Marketplaces}} (CODE@MIT 2024)
-            \item \href{}{\color{blue}{Measuring direct and Indirect Impacts in a Multi-Sided Marketplace: Evidence from a Clustered Multiple Randomization Experiment}} (TSMO@KDD 2024, CODE@MIT 2024)
+            \item \href{}{\color{blue}{Measuring direct and Indirect Impacts in a Multi-Sided Marketplace: Evidence from a Clustered Multiple Randomization Experiment**}} (TSMO@KDD 2024, CODE@MIT 2024)
         \end{itemize}
 	}
 	\normalsize{    
     \item \textbf{Enhancing Causal Estimates via Covariate Adjustments and Traffic Prediction:}
-    A/B tests are notoriously noisy. To better estimate the impact of interventions, we can leverage side information (covariates) and embed it within regression models. 
-    Over the last year, I partnered with engineering teams to design and implement a distributed analytic engine using PySpark, enabling more accurate causal estimates in thousands of daily experiments. 
+    A/B tests are notoriously noisy. To better estimate the impact of interventions, we can leverage unit-level side information (covariates) and embed it within regression models. 
+    Over the last year, I lead the design and implementation of a distributed analytic engine for the analysis of very large volumes of experimental data produced by online experiments.
+    Our system leverages a distributed architecture that heavily relies on PySpark for data processing. 
+    Our product enables more accurate causal estimates in thousands of daily experiments. 
      This innovation was backed by research on the value of covariates in online A/B testing, contributing to improvements in experiment analytics.
-     As part of this work stream, I also developed methods to better predict future traffic in online experiments. Featured papers:}
+     As part of this work stream, I also developed methods to better predict future traffic in online experiments. Featured papers (asterisk denotes first authorship, double asterisk first co-authorship):}
      \small{
     \begin{itemize}
-        \item  \href{https://proceedings.mlr.press/v218/masoero23a.html}{\color{blue}{Leveraging Covariate Adjustments at Scale in Online A/B Testing}} (KDD CDPD, 2023).
-        \item \href{https://arxiv.org/pdf/2402.03231}{\color{blue}{Improved prediction of future online activity in online A/B testing}} (in submission)
-        \item \href{https://arxiv.org/abs/2401.14722}{\color{blue}{A Nonparametric Bayes Approach to Online Activity Prediction}} (in submission)
+        \item  \href{https://proceedings.mlr.press/v218/masoero23a.html}{\color{blue}{Leveraging Covariate Adjustments at Scale in Online A/B Testing*}} (KDD CDPD, 2023).
+        \item \href{https://arxiv.org/pdf/2402.03231}{\color{blue}{Improved prediction of future online activity in online A/B testing*}} (in submission)
+        \item \href{https://arxiv.org/abs/2401.14722}{\color{blue}{A Nonparametric Bayes Approach to Online Activity Prediction*}} (in submission)
     \end{itemize}
     }
 \end{itemize}
