--- a/cv/cv_masoero_2025.tex
+++ b/cv/cv_masoero_2025.tex
@@ -118,13 +118,12 @@ bookmarks, colorlinks, breaklinks,
 %		\item \textbf{Levaraging covariates for improved estimates of causal effects in online experiments}: I partnered with Weblab's engineering team to improve and extend our analytic engine, moving towards a flexible, distributed interface. My work consisted of both leading the design the analytic engine, as well as hands-on implementation of PySpark routines to support production code. Our engine produces thousands of causal estimates of production experiments running at a daily cadence. This implementation was informed by  my research on the value of using covariates to form estimates of causal effects in online experiments. For an illustration, see \href{https://proceedings.mlr.press/v218/masoero23a.html}{``\emph{Leveraging covariate adjustments at scale in online A/B testing}''} (KDD CDPD, 2023).
 %\end{itemize}
 
-\section*{Senior Applied Scientist | Amazon, Weblab}
-\textbf{September 2021 - Present} 
-%[09/21-09/22: Applied Scientist I; 09/22-05/24: Applied Scientist II; 05/24--current: Applied Scientist III]
+\section*{Senior Applied Scientist (AS) | Amazon, Weblab}
+\textbf{September 2021 - Present} (\emph{09/21--09/22: AS I; 09/22--05/24: AS II; 05/24--current: AS III})
 
 I am a Senior Applied Scientist at Weblab, Amazon’s largest A/B testing platform, where I work on advancing online experimentation at scale. My work spans across open-ended research, academic paper writing, and the hands-on implementation of large-scale algorithms in production, directly impacting hundreds of millions of customers daily. 
 
-\par At Weblab, I collaborate with leading experts in causal inference and drive innovation in:
+\par My main focus in Weblab has been:
 
 \begin{itemize}
     \item \textbf{Online Experimentation with Interference:} 
@@ -193,7 +192,9 @@ During my PhD, I worked on Bayesian inference, with an emphasis on the developme
 \section*{Research}
 %\years{2020} 
 \begin{itemize}
-	\item ``\href{https://drive.google.com/drive/folders/1557KDfzlwEi-Pn3J0fDgMX3XWwSqyeij}{{\textbf{Measuring direct and Indirect Impacts in a Multi-Sided Marketplace: Evidence from a Clustered Multiple Randomization Experiment}}''} (CODE@MIT2024, KDD 2024, Workshop on Two-Sided Marketplace Optimization)
+	\item ``\href{https://arxiv.org/abs/2506.12654}{{\textbf{Robust and efficient multiple-unit switchback experimentation}}''} (pre-print; Missault, \mm, Delb\'{e}, Richardson, Imbens)
+	\item ``\href{https://arxiv.org/abs/2505.19643}{{\textbf{Online activity prediction via generalized Indian buffet process models}}''} (pre-print; Beraha, \mm, Favaro, Richardson)
+	\item ``\href{https://drive.google.com/drive/folders/1557KDfzlwEi-Pn3J0fDgMX3XWwSqyeij}{{\textbf{Measuring direct and Indirect Impacts in a Multi-Sided Marketplace: Evidence from a Clustered Multiple Randomization Experiment}}''} CODE@MIT2024, KDD 2024, Workshop on Two-Sided Marketplace Optimization; (Hut, Imbens, \mm, Vijaykumar)
 	\item ``\textbf{Multi-Armed Bandits with Network Interference}''; \href{https://arxiv.org/abs/2405.18621}{NeurIPS 2024}. (Agarwal, Agarwal, \mm, Whitehouse)
 	\item ``\textbf{Double trouble: Predicting new variant counts across two heterogeneous populations}''; \href{https://arxiv.org/pdf/2403.02154.pdf}{arXiv preprint, 2403.02154}. (Shen, \mm, Schraiber, Broderick)
 	\item ``\textbf{Improved prediction of future user activity in online A/B testing}''; \href{https://arxiv.org/abs/2402.03231}{arXiv preprint, 2402.03231}. (\mm, Beraha, Richardson, Favaro)
