--- a/cv/cv_masoero_2025.tex
+++ b/cv/cv_masoero_2025.tex
@@ -192,7 +192,10 @@ During my PhD, I worked on Bayesian inference, with an emphasis on the developme
 \section*{Research}
 %\years{2020} 
 \begin{itemize}
-	\item ``\href{https://arxiv.org/abs/2506.12654}{{\textbf{Robust and efficient multiple-unit switchback experimentation}}''} (pre-print; Missault, \mm, Delb\'{e}, Richardson, Imbens)
+	\item ``\textbf{Carryover detection in switchback experimentation}''; CauScien Workshop, NeurIPS 2025. (\href{https://openreview.net/pdf?id=fyfkP1TOKW}{Missault, \mm})
+	\item ``\textbf{Optimizing duration of online experiments via Bayesian early termination}''; Code@MIT 2025. (\mm, Gualavisi)
+	\item ``\textbf{Rethinking Power in Online Experimentation: Connecting Frequentist and Bayesian Approaches to Inform Experiment Design}''; Code@MIT 2025. (Gualavisi, Kessler, \mm)
+	\item ``\href{https://arxiv.org/abs/2506.12654}{{\textbf{Robust and efficient multiple-unit switchback experimentation}}''} Code@MIT 2025. (Missault, \mm, Delb\'{e}, Richardson, Imbens)
 	\item ``\href{https://arxiv.org/abs/2505.19643}{{\textbf{Online activity prediction via generalized Indian buffet process models}}''} (pre-print; Beraha, \mm, Favaro, Richardson)
 	\item ``\href{https://drive.google.com/drive/folders/1557KDfzlwEi-Pn3J0fDgMX3XWwSqyeij}{{\textbf{Measuring direct and Indirect Impacts in a Multi-Sided Marketplace: Evidence from a Clustered Multiple Randomization Experiment}}''} CODE@MIT2024, KDD 2024, Workshop on Two-Sided Marketplace Optimization; (Hut, Imbens, \mm, Vijaykumar)
 	\item ``\textbf{Multi-Armed Bandits with Network Interference}''; \href{https://arxiv.org/abs/2405.18621}{NeurIPS 2024}. (Agarwal, Agarwal, \mm, Whitehouse)
@@ -230,9 +233,14 @@ for practical Bayesian nonparametrics}'', \textcolor{red}{\textbf{Spotlight}}, \
 \end{itemize}
 \section*{Talks, Poster sessions and Conference Presentations}
 %\section*{Presentations}
+\years{2025}
+\begin{itemize}
+	\item Conference on Online Digital Experimentation, MIT. Three selected papers: two selected talks, one poster.
+	\item NeurIPS; Poster presentation at \href{CauScien}{https://sites.google.com/view/causcien}.
+\end{itemize}
 \years{2024}
 \begin{itemize}
-	\item Conference on Online Digital Experimentation, MIT, two selected talks, one poster.
+	\item Conference on Online Digital Experimentation, MIT. Three selected papers: two selected talks, one poster.
 	\item KDD 2024 Workshop on Two Sided Marketplace Optimization, selected talk.
 	\item Conference on Online Digital Experimentation, MIT, two selected talks, one poster session.
 \end{itemize}
