--- a/cv/cv_masoero_2025.tex
+++ b/cv/cv_masoero_2025.tex
@@ -130,7 +130,7 @@ I am a Senior Applied Scientist at Weblab, Amazon’s largest A/B testing platfo
     I have pioneered experimental designs for large-scale testing of interference in online experiments, co-leading the implementation of the first large ``multi-randomized'' experiments at Amazon. These experiments, unlike classical A/B tests, jointly randomize across multiple units in the experiment (e.g., customers and advertisers). Via these designs, we can detect ``spillover effects'' that would otherwise be overlooked. For example, these have been implemented to precisely capture the indirect behavioral response of advertisers induced by a change in pricing schemes of ad-auctions. Key papers I have authored include (asterisk denotes first authorship, double asterisk first co-authorship): 
     \small{
         \begin{itemize}
-	    \item \href{https://arxiv.org/abs/2401.01264}{\color{blue}{Multiple Randomization Designs*}} (In submission)
+	    \item \href{https://arxiv.org/abs/2401.01264}{\color{blue}{Multiple Randomization Designs*}} (Accepted; JRSS-B (2026+))
             \item {\href{https://projecteuclid.org/journals/statistical-science/advance-publication/Experimental-Design-in-Marketplaces/10.1214/23-STS883.short}{\color{blue}{Experimental Design in Marketplaces*}}} (Statistical Science, 2023)
             \item \href{https://www.amazon.science/publications/efficient-switchback-experiments-via-multiple-randomization-designs}{\color{blue}{Efficient Switchback Experiments via Multiple Randomization Designs*}} (CODE@MIT 2023)
             \item \href{https://arxiv.org/abs/2405.18621}{\color{blue}{Multi-Armed Bandits with Network Interference}} (NeurIPS 2024, and CODE@MIT 2024)
